@@ -1,5 +1,7 @@
 Changes for 1.1beta10:
 
+ - improved graphs, added 'Working time' displaying (Eugene)
+ - added 'Working time' configuration (Eugene)
  - added support of history of actions and events for screens (Martins)
  - fixed server hanging in calculation of aggregate functions (Alexei)
  - allow item delays up-to 24h (Alexei)
